# spotispy

./: .cache  .gitignore  Dockerfile  README.md  dagster.yaml  docker-compose.yaml  example.env  pyproject.toml  spotispy.sql  workspace.yaml
spotispy/: __init__.py  repository.py
spotispy/assets/: __init__.py
spotispy/io_managers/: __init__.py  firebase.py  postgres.py
spotispy/jobs/: __init__.py  load_to_postgres.py  sentinel.py
spotispy/ops/: __init__.py  load_to_postgres.py  sentinel.py
spotispy/schedules/: load_to_postgres.py  sentinel.py
sql/: spotispy_schema.sql
tests/: test_spotispy.py
