[tool.poetry]
name = "spotispy"
version = "0.1.0"
description = ""
authors = ["Luis Malta <luiso.malta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "^2.20.0"
dagit = "^1.0.2"
dagster = "^1.0.2"
dagster-postgres = "^0.16.4"
firebase-admin = "^5.2.0"
more-itertools = "^8.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
